# hzlauncher

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: backend.rs  main.rs  model.rs  ui.rs
src/backend/: downloader.rs  login.rs  mc_downloader.rs  mc_manager.rs
src/model/: account.rs  all_versions.rs
src/ui/: login.rs  main.rs  manager.rs
